SUBDIRS = \
	qgraf \
	src

bin_SCRIPTS = diana

nobase_pkgdata_DATA = \
tml/WA_Majorana.inc \
tml/basis.tml \
tml/create.tml \
tml/folders.tml \
tml/ftop0_3_0.top \
tml/ftop0_4_0.top \
tml/ftop1_5_3.top \
tml/header.ps \
tml/itop0.top \
tml/itop1.top \
tml/itop2.top \
tml/routines.rtn \
tml/sections.tml \
tml/simpleMajorana.inc \
tml/simpleQDE.inc \
tml/specmode.tml \
tml/su3_nocolor.inc \
tml/tbl.prg 

