AC_INIT([diana], 2.3.61, pikelner@theor.jinr.ru)
AC_CONFIG_SRCDIR(src/init.c)
AC_CONFIG_SRCDIR(qgraf/qgraf-3.1.4.f)
AM_INIT_AUTOMAKE([foreign 1.8])

AC_CHECK_LIB([m],[ceil])
                                                           
AC_PROG_CC
AC_PROG_F77

AC_PROG_INSTALL
AC_LANG([C])
     
AC_OUTPUT(Makefile diana qgraf/Makefile src/Makefile )
