## Process this file with automake to produce Makefile.in
bin_PROGRAMS = diana.bin
diana_bin_SOURCES = browser.c cmd_line.c cnf_read.c debugger.c halt.c hash.c hashtabs.c init.c int2sig.c last_num.c macro.c pilot.c queue.c read_inp.c remarks.c rexec.c run.c tools.c topology.c truns.c tt_gate.c tt_load.c tt_utils.c utils.c
diana_bin_CPPFLAGS = $(DIANA_BIN_CFLAGS) 
diana_bin_CFLAGS = -O2 -DNO_DEBUGGER
diana_bin_LDADD = $(DIANA_BIN_LIBS)
